Fixed spacing issue with project posts

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -21,13 +21,13 @@
 }
 
 .content-panel {
-  margin: var(--default-margin);
+  width: inherit;
   padding: calc(2 * var(--default-padding));
   background-color: var(--default-panel-background);
   border-radius: var(--default-border-radius);
   margin-top: calc(var(--default-margin) * 4);
   text-align: center;
-  width: var(--content-max-width);
+  max-width: var(--content-max-width);
   box-shadow: var(--default-box-shadow);
 }
 
